cs-deployment.yaml
##################################################################################################
# codescene service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: codescene
  labels:
    app: codescene
    version: "3"
spec:
  ports:
  - name: http
    port: 3003
    targetPort: 3003
    protocol: TCP
  selector:
    app: codescene
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: codescene
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: codescene
        version: "3"
    spec:
      containers:
      - image: empear/ubuntu-onprem
        imagePullPolicy: IfNotPresent
        name: codescene
        resources:
            requests:
              memory: "500Mi"
        ports:
        - containerPort: 3003
          protocol: TCP
        volumeMounts:
        - mountPath: "/opt/codescene"
          name: codescene-volume
          subPath: codescene
        - mountPath: "/opt/codescene/analysis"
          name: analysis-volume
          subPath: analysis
      volumes:
        - name: codescene-volume
          persistentVolumeClaim:
            claimName: codescene-pvc
#        - name: analysis-volume
#          persistentVolumeClaim:
#            claimName: analysis-pvc
