cs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: codescene
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: codescene
              servicePort: 3003
